[gd_scene load_steps=8 format=3 uid="uid://cuhvts7q5kw12"]

[ext_resource type="Script" uid="uid://lhx7lmygj1wo" path="res://Scripts/SequenceEditor/sequence_ui.gd" id="1_pec0k"]
[ext_resource type="Texture2D" uid="uid://dwss8wp8sp0cd" path="res://Textures/Buttons/delete.png" id="2_txpqf"]
[ext_resource type="Texture2D" uid="uid://b3vpgo8qy7odw" path="res://Textures/Buttons/delete_pressed.png" id="3_mai06"]
[ext_resource type="Texture2D" uid="uid://btnjxoo5sjc4u" path="res://Textures/Buttons/delete_hover.png" id="4_4idx5"]
[ext_resource type="Texture2D" uid="uid://uboxunhwhjg1" path="res://Textures/Buttons/select.png" id="8_ro2pu"]
[ext_resource type="Texture2D" uid="uid://cdy0sxx3cq4yc" path="res://Textures/Buttons/select_pressed.png" id="9_t4fva"]
[ext_resource type="Texture2D" uid="uid://y37g71f1p6yp" path="res://Textures/Buttons/select_hover.png" id="10_se0cs"]

[node name="Sequence" type="Control"]
custom_minimum_size = Vector2(1000, 100)
layout_mode = 3
anchor_right = 0.99200004
anchor_bottom = 0.15400001
offset_right = 0.21594238
offset_bottom = 0.20799255
script = ExtResource("1_pec0k")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -46.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2509804, 0.2509804, 0.2509804, 0.47843137)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -45.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.998
anchor_bottom = 0.8
offset_left = 2.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DeleteButton" type="TextureButton" parent="Panel"]
layout_mode = 0
offset_left = 980.0
offset_top = 82.0
offset_right = 1044.0
offset_bottom = 98.0
texture_normal = ExtResource("2_txpqf")
texture_pressed = ExtResource("3_mai06")
texture_hover = ExtResource("4_4idx5")

[node name="SelectButton" type="TextureButton" parent="Panel"]
layout_mode = 0
offset_left = 914.0
offset_top = 82.0
offset_right = 978.0
offset_bottom = 98.0
texture_normal = ExtResource("8_ro2pu")
texture_pressed = ExtResource("9_t4fva")
texture_hover = ExtResource("10_se0cs")

[node name="SequenceName" type="LineEdit" parent="Panel"]
layout_mode = 0
offset_left = 2.0
offset_top = 83.0
offset_right = 370.0
offset_bottom = 114.0
scale = Vector2(0.5, 0.5)

[connection signal="pressed" from="Panel/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="Panel/SelectButton" to="." method="_on_select_button_pressed"]
[connection signal="text_changed" from="Panel/SequenceName" to="." method="_on_deck_name_text_changed"]
[connection signal="text_submitted" from="Panel/SequenceName" to="." method="_on_sequence_name_text_submitted"]
